2021/7/1    Nakata Maho <maho@riken.jp> 1.0.0
            * MPLAPACK now use Rlaqr0 in Rhseqr.cpp for big (n>=15) matrices

2021/6/30   Nakata Maho <maho@riken.jp> 1.0.0
            * Tests of the Nonsymmetric Eigenvalue Problem Driver (Red.in)
              Rgeev (eigenvalues and eigevectors)
              have passed for MPFR version.

            * Tests of the Nonsymmetric Eigenvalue Problem Driver (Red.in)
              Rgees (Schur form)
              have passed for MPFR version.

            * Tests of the Nonsymmetric Eigenvalue Problem Expert Driver (Red.in)
              Rgeevx (eigenvalues, eigenvectors and condition numbers)
              have passed for MPFR version.

            * Tests of the Nonsymmetric Eigenvalue Problem Expert Driver (Red.in)
              Rgeesx (Schur form and condition numbers)
              have passed for MPFR version.

            * Note that currently MPLAPACK use Rhseqr.cpp: L.134 use Rlaqr0 instead of
              Rlahqr for big matrices.

            * Testing Generalized QR and RQ factorization routines
              have passed for MPFR version.

2021/6/29   Nakata Maho <maho@riken.jp> 1.0.0
            * Tests of Rsbtrd (Rsb.in)
              (reduction of a symmetric band matrix to tridiagonal form)
              have passed for MPFR version.

            * Tests of the symmetric eigenproblem using
              the 2-stage reduction techniques (se2.in)
              have passed for MPFR version.

            * Tests of Rgbbrd (Rbb.in)
              (reduction of a general band matrix to real bidiagonal form)
              have passed for MPFR version.

2021/6/28   Nakata Maho <maho@riken.jp> 1.0.0
            * Tests of the symmetric eigenproblem (sep.in)
              have passed for MPFR version.

2021/6/25   Nakata Maho <maho@riken.jp> 1.0.0
            * Tests of the nonsymmetric eigenproblem (nep.in)
              have passed for MPFR version.

2021/6/21   Nakata Maho <maho@riken.jp> 1.0.0